<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PreLoginFragment"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <TextView
            android:id="@+id/preLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preLoginDescription"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/loginChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:foreground="@drawable/blue_button"
            android:textColor="@color/colorAccent"
            android:text="@string/login"
            app:layout_constraintEnd_toStartOf="@+id/registerChoice"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preLoginText" />

        <Button
            android:id="@+id/registerChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:foreground="@drawable/blue_button"
            android:textColor="@color/colorAccent"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/loginChoice"
            app:layout_constraintTop_toTopOf="@+id/loginChoice" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>